css/style.scss
/* ... */
// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "base",
        "layout",
        "syntax-highlighting"
;


/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}



/**
 * Basic styling
 */
body {
    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
    color: $text-color;
    background-color: $background-color;
    -webkit-text-size-adjust: 100%;
    -webkit-font-feature-settings: "kern" 1;
    -moz-font-feature-settings: "kern" 1;
    -o-font-feature-settings: "kern" 1;
    font-feature-settings: "kern" 1;
    font-kerning: normal;
}



/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 2;
}



/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}



/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
}

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-weight: $base-font-weight;
}



/**
 * Links
 */
a {
    color: #aaa !important;
    text-decoration: none;

    &:visited {
        color: darken($brand-color, 15%);
    }

    &:hover {
        color: black !important;
        border-bottom: 1px dotted black ;
    }

    &.page-link{
      &:hover {
          color: $text-color;
          border-bottom: 1px dotted black ;
      }
    }
    &.postLink{
      color: black !important;
      &:hover {

          border-bottom: 1px dotted black ;
      }

      &:visited {
          color: "crimson" !important;
      }
    }
    &.post-title-link{
      color: black !important;
      &:hover {

          border-bottom: 1px dotted black !important ;
      }

      &:visited {
          color: "crimson" !important;
      }
    }
}



/**
 * Blockquotes
 */
blockquote {
    color: $grey-color;
    border-left: 4px solid $grey-color-light;
    padding-left: $spacing-unit / 2;
    font-size: 18px;
    letter-spacing: -1px;
    font-style: italic;

    > :last-child {
        margin-bottom: 0;
    }
}



/**
 * Code formatting
 */
pre,
code {
    font-size: 15px;
    border: 1px solid $grey-color-light;
    border-radius: 3px;
    background-color: #eef;
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: auto;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}



/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}



/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;

        path {
            fill: $grey-color;
        }
    }
}

.post {
  font-family: "Source Sans Pro";
  font-size: 18px;
  font-weight: 300;
  padding-top: 0;
}
.home{
  padding-bottom: 5em;
}
.download {
  padding: 10px;
}
.authorKeyword {
  text-transform: uppercase;
  font-size: 16px;
  letter-spacing: 2px;
  text-indent: 2px;
  padding-top:0.5em;
}
.writtenBy {
  letter-spacing: 0;
  text-indent: 0;
  text-transform: uppercase;
}
.archive-intro {
  font-size: 14px;
  text-transform: uppercase;
  letter-spacing: 2px;
  text-indent: 2px;
}
.archiveIntro {
  text-align: center;
}
.hint {
  text-transform: uppercase;
  font-size: 11px;
  letter-spacing: 2px;
  text-indent: 2px;
}
.example {
  font-family: 'Menlo';
  padding: 10px;
}
.manual {
  text-transform: uppercase;
  font-size: 16px;
  letter-spacing: 2px;
  text-indent: 2px;
}
.postContent {
  padding-top: 3.5em;
  text-align: center;
}
.postDate {
  float: left;
  text-transform: uppercase;
  font-family: "Source Sans Pro";
  font-size: 16px;
  font-weight: 300;
  letter-spacing: 2px;
  text-indent: 2px;
}
.postTag {
  float: right;
}
.postTitle {
  font-weight: 400;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 3px;
  text-indent: 3px;
}
/**
 * Site header
 */
.site-header {
  border-top: 5px solid $grey-color-dark;
  border-bottom: 1px solid $grey-color-light;
  min-height: 56px;
  // Positioning context for the mobile navigation icon
  position: relative;
}
.site-title {
  font-size: 64px;
  font-weight: 100;
  font-family: 'PT Sans';
  text-transform: capitalize;
  font-weight: 500;
  margin-top: 1em;
  &,
  &:visited {
    color: $grey-color-dark;
  }
}
.site-description {
  font-size: 14px;
  letter-spacing: 2px;
  text-indent: 6px;
  font-family: 'Josefin Sans';
}
.exclamationMark {
  padding-left: 2em;
  padding-right: 2em;
}
.site-navigation {
  color: #aaa;
  text-transform: uppercase;
  font-size: 14px;
  letter-spacing: 2px;
  text-indent: 6px;
  font-family: 'Josefin Sans';
  font-weight: 300;
  padding-top: 5em;
}
.page-title {
  text-transform: uppercase;
  letter-spacing: 2px;
  text-indent: 2px;
  font-family: "PT Sans";
  font-size: 12px;
}
.page-tagline {
  font-size: 18px;
  font-family: "PT Sans";
  color: rgb(170, 170, 170);
  text-align: center;
  text-transform: lowercase;
}
.page-link {
  color: rgb(170, 170, 170);
}
/* ... */

